deuxieme commit avec maven