@@ -3,37 +3,38 @@ package tests;
 import static org.junit.jupiter.api.Assertions.*;
 
 import java.util.ArrayList;
+import java.util.List;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
-import carte.Carte;
+import carte.Card;
 import carte.JeuMensonge;
-import carte.Joueur;
+import carte.Player;
 import carte.NomCarte;
 import exceptions.EmptyListOfCardsException;
 
 class JeuTest {
 	private JeuMensonge jeu;
-	private ArrayList<Carte> listeDeCarte;
-	private ArrayList<Joueur> listeJoueur;
+	private List<Card> listeDeCarte;
+	private List<Player> listeJoueur;
     private static final String[] listeNumcarte = { "A", "7", "8", "9", "10", "J", "Q", "K" };
-    private ArrayList<Carte> listeCarteJouer;
-    private Carte carteCourante;
+    private List<Card> listeCarteJouer;                                                                                                                                                                                             ;
+    private Card carteCourante;
 
 	@BeforeEach
 	void setUp() throws EmptyListOfCardsException {
 		jeu = new JeuMensonge();
-		listeDeCarte = new ArrayList<Carte>();
-		listeJoueur = new ArrayList<Joueur>();
-		jeu.creationDesCarte(listeDeCarte);
-		Joueur joueur1 = new Joueur("Joueur_1");
-		Joueur joueur2 = new Joueur("Joueur_2");
+		listeDeCarte = new ArrayList<Card>();
+		listeJoueur = new ArrayList<Player>();
+		jeu.createCards(listeDeCarte);
+		Player joueur1 = new Player("Joueur_1");
+		Player joueur2 = new Player("Joueur_2");
 		listeJoueur.add(joueur1);
 		listeJoueur.add(joueur2);
-		listeCarteJouer = new ArrayList<Carte>();
-		carteCourante = new Carte(null, null);
+		listeCarteJouer = new ArrayList<Card>();
+		carteCourante = new Card(null, null);
 	}
 
 	// Les methodes pour tester la methode melange de carte
@@ -42,23 +43,23 @@ class JeuTest {
 	void listeVide() {
 		listeDeCarte = null;
 		assertThrows(NullPointerException.class, () -> {
-			jeu.melangerJeu(listeDeCarte);
+			jeu.mixCards(listeDeCarte);
         });
 	}
 	
 	@Test
 	void verifierShuffle() throws EmptyListOfCardsException {
-		NomCarte premier = listeDeCarte.get(0).getNom();
-		jeu.melangerJeu(listeDeCarte);
-		assertNotEquals(premier, listeDeCarte.get(0).getNom());
-	}
+		NomCarte premier = listeDeCarte.getFirst().getNom();
+		jeu.mixCards(listeDeCarte);
+		assertFalse(listeDeCarte.getFirst().getNom().equals(premier));
+	} 
 	
 	//verification de la distribution des cartes 
 	@Test
 	void listeCarteVide() {
 		listeDeCarte = null;
 		assertThrows(NullPointerException.class, ()->{
-			jeu.distributionCarte(listeDeCarte, listeJoueur);
+			jeu.distribute(listeDeCarte, listeJoueur);
 		});
 	}
 	
@@ -66,7 +67,7 @@ class JeuTest {
 	void listeJoueurvide() {
 		listeJoueur = null; 
 		assertThrows(NullPointerException.class, ()->{
-			jeu.distributionCarte(listeDeCarte, listeJoueur);
+			jeu.distribute(listeDeCarte, listeJoueur);
 		});
 	}
 	
@@ -78,55 +79,55 @@ class JeuTest {
 	// verification de la methode removeCard
 	@Test
 	void listeCarteNull() {
-		Carte carte = null; 
+		Card carte = null; 
 		assertThrows(NullPointerException.class, ()->{
-			jeu.removeCard(carte, listeDeCarte);
+			jeu.removeCards(carte, listeDeCarte);
 		});
 	}
 	
 	@Test
 	void listeCartesVide() {
 		listeDeCarte= null;
-		Carte carte = new Carte(NomCarte.Coeur, listeNumcarte[0]);
+		Card carte = new Card(NomCarte.Coeur, listeNumcarte[0]);
 		assertThrows(NullPointerException.class, ()->{
-			jeu.removeCard(carte, listeDeCarte);
+			jeu.removeCards(carte, listeDeCarte);
 		});
 	}
 	
 	@Test
 	void conditionRespecter() throws EmptyListOfCardsException {
-		Carte car = listeDeCarte.get(0);
-		jeu.removeCard(car, listeDeCarte);
+		Card car = listeDeCarte.get(0);
+		jeu.removeCards(car, listeDeCarte);
 		assertTrue(!listeDeCarte.contains(car));
 	}
 	 
 	@Test
 	void conditionNonRespecter() throws EmptyListOfCardsException {
-		Carte car = new Carte(NomCarte.Coeur, "0");
-		jeu.removeCard(car, listeDeCarte);
+		Card car = new Card(NomCarte.Coeur, "0");
+		jeu.removeCards(car, listeDeCarte);
 		assertEquals(32, listeDeCarte.size(),"la lsite doit avoir ne doit pas changer");
 	}
 	
 	//  verification de la methode de jeu d'une carte
 	@Test
 	void joueurNull() {
-		Joueur j = null;
+		Player j = null;
 		assertThrows(NullPointerException.class, ()->{
-			jeu.jouerUneCarte(j, listeCarteJouer, carteCourante);
+			jeu.playOneCard(j, listeCarteJouer, carteCourante);
 		});
 	}
 	
 	void listeCarteJouerNull() {
 		listeCarteJouer = null;
 		assertThrows(NullPointerException.class, ()->{
-			jeu.jouerUneCarte(listeJoueur.get(0), listeCarteJouer, carteCourante);
+			jeu.playOneCard(listeJoueur.get(0), listeCarteJouer, carteCourante);
 		});
 	}
 	
 	@Test
 	void verifierJouerUneCarte() throws EmptyListOfCardsException {
-		jeu.distributionCarte(listeDeCarte, listeJoueur);
-		jeu.jouerUneCarte(listeJoueur.get(1), listeCarteJouer, carteCourante);
+		jeu.distribute(listeDeCarte, listeJoueur);
+		jeu.playOneCard(listeJoueur.get(1), listeCarteJouer, carteCourante);
 		assertEquals(listeCarteJouer.getLast().getNom(), carteCourante.getNom());
 	}
 	
@@ -134,9 +135,9 @@ class JeuTest {
     @Test
     void refuterJoueurNull() {
     	
-    	Joueur j = null;
+    	Player j = null;
     	assertThrows(NullPointerException.class, ()-> { 
-    		jeu.refuter(j, listeJoueur, carteCourante, NomCarte.Coeur, listeCarteJouer);
+    		jeu.contradict(j, listeJoueur, carteCourante, NomCarte.Coeur, listeCarteJouer);
     	});
     }
 
@@ -144,7 +145,7 @@ class JeuTest {
     void refuterListeJoueurVide() {
     	listeJoueur= null;
     	assertThrows(NullPointerException.class, ()-> { 
-    		jeu.refuter(new Joueur("Jou1") , listeJoueur, carteCourante, NomCarte.Coeur, listeCarteJouer);
+    		jeu.contradict(new Player("Jou1") , listeJoueur, carteCourante, NomCarte.Coeur, listeCarteJouer);
     	});
     }
     
@@ -153,7 +154,7 @@ class JeuTest {
     void refuterAvisVide() {
     	NomCarte avis = null;
     	assertThrows(NullPointerException.class, ()-> { 
-    		jeu.refuter(new Joueur("jou") , listeJoueur, carteCourante, avis, listeCarteJouer);
+    		jeu.contradict(new Player("jou") , listeJoueur, carteCourante, avis, listeCarteJouer);
     	});
     }
     
